...
                    <view key="view" contentMode="scaleToFill" id="q0h-Ci-IS5">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Game board placeholder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Gq-ES-rUk">
                                <rect key="frame" x="66" y="229.5" width="188.5" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="GB_placeholder"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="1MF-8c-AHc"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lgj-8X-m5P">
                                <rect key="frame" x="117.5" y="430" width="85" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="finish_game_btn"/>
                                <state key="normal" title="Finish Game"/>
                                <connections>
                                    <segue destination="I1x-ZH-u2b" kind="presentation" id="gW7-FD-jGZ"/>
                                </connections>
                            </button>
                        </subviews>
...
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="y1a-Zw-Lqh" id="IK6-Ac-QxP">
                                    <rect key="frame" x="0.0" y="0.0" width="320" height="109.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vvf-5T-wbq">
                                            <rect key="frame" x="30" y="26.5" width="60" height="60"/>
                                            <accessibility key="accessibilityConfiguration" identifier="btn_faction_1"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="60" id="6H9-4W-f0n"/>
                                                <constraint firstAttribute="width" constant="60" id="8dH-1h-szz"/>
                                            </constraints>
                                            <state key="normal" image="selectFaction"/>
                                            <connections>
                                                <action selector="chooseFaction1:" destination="iiv-S6-JMu" eventType="touchUpInside" id="G9C-h2-9v5"/>
                                            </connections>
                                        </button>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M61-ig-Wcl">
                                            <rect key="frame" x="120" y="26.5" width="60" height="60"/>
                                            <accessibility key="accessibilityConfiguration" identifier="btn_faction_2"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="60" id="mw3-Rm-r65"/>
                                                <constraint firstAttribute="height" constant="60" id="n8d-uV-B6f"/>
                                            </constraints>
                                            <state key="normal" image="selectFaction"/>
                                            <connections>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="iiv-S6-JMu" id="eCC-L4-Qla"/>
                            <outlet property="delegate" destination="iiv-S6-JMu" id="e2R-tE-Tca"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Set up game" id="1FX-Zh-C3I">
                        <barButtonItem key="leftBarButtonItem" title="Start game" id="Cb1-Wh-7kc">
                            <connections>
                                <segue destination="yOE-Hs-vgc" kind="popoverPresentation" popoverAnchorBarButtonItem="Cb1-Wh-7kc" id="3hw-1A-oOH">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                </segue>
                            </connections>
                        </barButtonItem>
...
